@@ -51,6 +51,7 @@ export(xGR2xGeneScores)
 export(xGR2xGenes)
 export(xGR2xNet)
 export(xGRcse)
+export(xGRmanhattan)
 export(xGRoverlap)
 export(xGRsampling)
 export(xGRscores)
