@@ -1,0 +1,146 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Function to visualise genomic regions using manhattan plot</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
+</head><body>
+
+<table width="100%" summary="page for xGRmanhattan"><tr><td>xGRmanhattan</td><td style="text-align: right;">R Documentation</td></tr></table>
+
+<h2>Function to visualise genomic regions using manhattan plot</h2>
+
+<h3>Description</h3>
+
+<p><code>xGRmanhattan</code> is supposed to visualise genomic regions using
+manhattan plot. It returns an object of class &quot;ggplot&quot;.
+</p>
+
+
+<h3>Usage</h3>
+
+<pre>
+xGRmanhattan(gr, chromosome.only = TRUE, color = c("royalblue",
+"sandybrown"), y.scale = c("normal", "sqrt", "log"), y.lab = NULL,
+top = NULL, top.label.type = c("text", "box"), top.label.size = 2,
+top.label.col = "black", top.label.query = NULL,
+label.query.only = FALSE, top.label.chr = T, verbose = TRUE)
+</pre>
+
+
+<h3>Arguments</h3>
+
+<table summary="R argblock">
+<tr valign="top"><td><code>gr</code></td>
+<td>
+<p>a GenomicRange object with a meta-column 'value'. If the
+meta-column 'label' is not provided, it will the name of this object</p>
+</td></tr>
+<tr valign="top"><td><code>chromosome.only</code></td>
+<td>
+<p>logical to indicate whether only those from
+input data will be displayed. By default, it sets to TRUE</p>
+</td></tr>
+<tr valign="top"><td><code>color</code></td>
+<td>
+<p>a character vector for colors to alternate chromosome
+colorings. If NULL, ggplot2 default colors will be used. If a single
+character is provided, it can be &quot;jet&quot; (jet colormap) or &quot;rainbow&quot;
+(rainbow colormap, that is, red-yellow-green-cyan-blue-magenta)</p>
+</td></tr>
+<tr valign="top"><td><code>y.scale</code></td>
+<td>
+<p>how to transform the y scale. It can be &quot;normal&quot; for no
+transformation, &quot;sqrt&quot; for square root transformation, and &quot;log&quot; for
+log-based transformation</p>
+</td></tr>
+<tr valign="top"><td><code>y.lab</code></td>
+<td>
+<p>the y labelling. If NULL (by default), it shows the column
+of input data</p>
+</td></tr>
+<tr valign="top"><td><code>top</code></td>
+<td>
+<p>the number of the top targets to be labelled/highlighted</p>
+</td></tr>
+<tr valign="top"><td><code>top.label.type</code></td>
+<td>
+<p>how to label the top targets. It can be &quot;box&quot;
+drawing a box around the labels , and &quot;text&quot; for the text only</p>
+</td></tr>
+<tr valign="top"><td><code>top.label.size</code></td>
+<td>
+<p>the highlight label size</p>
+</td></tr>
+<tr valign="top"><td><code>top.label.col</code></td>
+<td>
+<p>the highlight label color</p>
+</td></tr>
+<tr valign="top"><td><code>top.label.query</code></td>
+<td>
+<p>which top genes in query will be labelled. By
+default, it sets to NULL meaning all top genes will be displayed. If
+labels in query can not be found, then all will be displayed</p>
+</td></tr>
+<tr valign="top"><td><code>label.query.only</code></td>
+<td>
+<p>logical to indicate whether only those in query
+will be displayed. By default, it sets to FALSE. It only works when
+labels in query are enabled/found</p>
+</td></tr>
+<tr valign="top"><td><code>top.label.chr</code></td>
+<td>
+<p>logical to indicate whether the top hit per
+chromosome will be displayed. By default, it sets to TRUE. It only
+works when the parameter 'top' is null</p>
+</td></tr>
+<tr valign="top"><td><code>verbose</code></td>
+<td>
+<p>logical to indicate whether the messages will be
+displayed in the screen. By default, it sets to false for no display</p>
+</td></tr>
+</table>
+
+
+<h3>Value</h3>
+
+<p>a ggplot object.
+</p>
+
+
+<h3>Note</h3>
+
+<p>none
+</p>
+
+
+<h3>See Also</h3>
+
+<p><code>xGRmanhattan</code>
+</p>
+
+
+<h3>Examples</h3>
+
+<pre>
+## Not run: 
+# Load the library
+library(XGR)
+
+## End(Not run)
+
+RData.location &lt;- "http://galahad.well.ox.ac.uk/bigdata_dev"
+## Not run: 
+### GWAS catalog
+GWAScatalog &lt;- xRDataLoader('GWAScatalog',
+RData.location=RData.location)
+gwas &lt;- xGR(GWAScatalog$cse_hg19, format="chr:start-end")
+ind &lt;- match(names(gwas), GWAScatalog$cse_hg19)
+gwas$value &lt;- -log10(GWAScatalog$pvalue[ind])
+names(gwas) &lt;- GWAScatalog$snp_id_current[ind]
+gwas$label &lt;- names(gwas)
+gp &lt;- xGRmanhattan(gwas)
+gp
+
+## End(Not run)
+</pre>
+
+
+</body></html>
