@@ -5,6 +5,8 @@ NEW FEATURES
 
     o Add function 'xRPS' for calculating regulatory potential scores
     
+    o Add function 'xGRmanhattan' for genomic region manhattan plot
+    
 
 CHANGES IN VERSION 1.1.3
 -----------------------
